# OOP_lab5

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
lab5/: CMakeLists.txt  main.cpp
lab5/include/: forward_list.h  forward_list_iterator.h  forward_list_memory_resource.h
lab5/tests/: tests.cpp
